# fast_spell_checking

./: .gitignore  CMakeLists.txt  DoxygenConfig  Makefile  README.md  subject.txt
src/app/: file.cc  file.hh  levenshtein.cc  levenshtein.hh  main.cc
src/compiler/: main.cc  reader.cc  reader.hh  trie.cc  trie.hh
